update README Authors

--- a/README.Rmd
+++ b/README.Rmd
@@ -136,6 +136,7 @@ Coming soon.
 
 ## Authors
 
-Francisco Javier Luna-Vázquez (Author, Maintainer)
-
-Osval Antonio Montesinos-López (Author)
+ - Francisco Javier Luna-Vázquez (Author, Maintainer)
+ - Osval Antonio Montesinos-López (Author)
+ - Abelardo Montesinos-López (Author)
+ - José Crossa (Author)
