--- a/README.Rmd
+++ b/README.Rmd
@@ -134,6 +134,11 @@ head(Year_IBCF)
 How to cite the package...
 Coming soon.
 
+## Issues
+
+Feel free to report new issues in this link [Issues](https://github.com/frahik/IBCF.MTME/issues/new)
+
+
 ## Authors
 
  - Francisco Javier Luna-Vázquez (Author, Maintainer)
