--- a/README.Rmd
+++ b/README.Rmd
@@ -5,6 +5,11 @@ output: github_document
 ---
 
 Item Based Collaborative Filterign For Multi-trait and Multi-environment Data in R.
+[![CRAN Status][cran-badge]][cran]
+[![License: LGPL v3][LGPL-badge]][LGPL]
+[![Project Status: Active][status-bagde]][status]
+[![Downloads][downloads-badge]][cran]
+[![Release][release-badge]][cran]
 
 ## New in this dev version
 
@@ -158,3 +163,12 @@ Feel free to report new issues in this link [Issues](https://github.com/frahik/I
  - Osval Antonio Montesinos-López (Author)
  - Abelardo Montesinos-López (Author)
  - José Crossa (Author)
+
+[cran-badge]: http://www.r-pkg.org/badges/version/IBCF.MTME "CRAN Page"
+[LGPL-badge]: https://img.shields.io/badge/License-LGPL%20v3-blue.svg "LGPL, Version 2.0"
+[status-bagde]: http://www.repostatus.org/badges/latest/active.svg "status"
+[downloads-badge]: http://cranlogs.r-pkg.org/badges/IBCF.MTME) "IBCF.MTME cranlogs"
+[release-badge]: http://www.r-pkg.org/badges/version-ago/IBCF.MTME "IBCF.MTME release"
+[cran]: https://cran.r-project.org/package=IBCF.MTME "CRAN Page"
+[LGPL]: https://www.gnu.org/licenses/lgpl-3.0 "LGPL, Version 2.0"
+[status]: http://www.repostatus.org/#active "status - active"
