--- a/README.Rmd
+++ b/README.Rmd
@@ -1,35 +1,68 @@
 ---
-title: "IBCF.MTME"
-date: "Last README update: `r format(Sys.Date())`"
 output: github_document
 ---
 
-Item Based Collaborative Filterign For Multi-trait and Multi-environment Data in R.
+<p align="center">
+  <a href="https://github.com/frahik/GFR">
+    <img src="Logo.png" alt="Genomic Functional Regression Logo"/>
+  </a>
+  <h4 align="center">
+    **I**tem **B**ased **C**ollaborative **F**ilterign For **M**ulti-**T**rait and **M**ulti-**E**nvironment Data in R  - Development version 1.2 - rev 5.
+  </h4>
+  <h4 align="center">
+    [Last README update: `r format(Sys.Date())`]
+  </h4>
+  <p align="center">
+    [![Release][release-badge]][cran]
+    [![License: LGPL v3][LGPL-badge]][LGPL]
+    [![Project Status: Active][status-bagde]][status]
+    [![Downloads][downloads-badge]][cran]
+  </p>
+</p>
 
+# Table of contents
+  - [NEWS](#news)
+  - [instructions](#instructions)
+    - [Installation](#install)
+    - [Load the package](#package)
+    - [Example of Cross-validation with IBCF.MTME and external data](#example1)
+      - [Load external data](#external-data)
+      - [Generate a data set in tidy data](#generate-tidydata)
+      - [Generate a Cross-validation](#generate-crossvalidation)
+      - [Fitting the predictive model](#fit-model)
+      - [Show some results](#results)
+    - [Example of Years prediction with IBCF.Years Function](#example2)
+      - [Loading your data](#external-data2)
+      - [Transforming the data from Tidy data to matrix form](#generate-matrixform)
+      - [Adjust the model](#adjust-model)
+      - [Show some results](#results)
+    - [Load available data from the package](#load-data)
+  - [How to cite this package](#cite)
+  - [Contributions](#contributions)
+  - [Authors](#authors)
 
-[![CRAN Status][cran-badge]][cran]
-[![License: LGPL v3][LGPL-badge]][LGPL]
-[![Project Status: Active][status-bagde]][status]
-[![Downloads][downloads-badge]][cran]
-[![Release][release-badge]][cran]
-
-## New in this dev version
-
-* Fixed important issue from `IBCF()$predictions_Summary`, now the correlation only uses the predicted testing data.
-* Now `IBCF()` function show `$yHat` that is an average of the prediction values of every partition.
-* Now `IBCF()` function shows in `$predicted_Partition` all the partitions values predicted (before was `$Predictions` and was changed to not confuse with `$yHat`).
-* Now `IBCF()` function shows in `$observed` all the response values from the DataSet.
-* Now `IBCF()` function shows in `$Data.Obs_Pred` all the response and predicted values from the DataSet.
-* Now `IBCF.Years()` function shows in `$predicted` all the values predicted.
-* Now `IBCF.Years()` function shows in `$observed` the response values for all the years from the Traits selected in `Traits.testing`.
-* Now `CV.RandomPart()` shows the lenght in every partition in `$CrossValidation_length`.
-* Now `CV.RandomPart()` admits `Traits.testing` to only use a `PTesting` percentage defined of the traits specified in the parameter to be used to fit the model.
+<h2 id="news">
+  News of this version (1.2)
+</h2>
+  * Fixed important issue from `IBCF()$predictions_Summary`, now the correlation only uses the predicted testing data.
+  * Now `IBCF()` function show `$yHat` that is an average of the prediction values of every partition.
+  * Now `IBCF()` function shows in `$predicted_Partition` all the partitions values predicted (before was `$Predictions` and was changed to not confuse with `$yHat`).
+  * Now `IBCF()` function shows in `$observed` all the response values from the DataSet.
+  * Now `IBCF()` function shows in `$Data.Obs_Pred` all the response and predicted values from the DataSet.
+  * Now `IBCF.Years()` function shows in `$predicted` all the values predicted.
+  * Now `IBCF.Years()` function shows in `$observed` the response values for all the years from the Traits selected in `Traits.testing`.
+  * Now `CV.RandomPart()` shows the lenght in every partition in `$CrossValidation_length`.
+  * Now `CV.RandomPart()` admits `Traits.testing` to only use a `PTesting` percentage defined of the traits specified in the parameter to be used to fit the model.
 
 See the last updates in [NEWS](NEWS.md).
 
-## Instructions for proper implementation
+<h2 id="instructions">
+  Instructions for proper implementation
+</h2>
 
-### Installation
+<h3 id="install">
+  Installation
+</h3>
 
 To complete installation of dev version of IBCF.MTME from GitHub, you must have previously installed the devtools package.
 
@@ -38,22 +71,31 @@ install.packages('devtools')
 devtools::install_github('frahik/IBCF.MTME')
 ```
 
-### Quick use 
+<h3 id="package">
+  Load the package
+</h3>
 
-### Load the package
 ```{r}
 library(IBCF.MTME)
 ```
 
-### Cross-validation IBCF
+<h3 id="example1">
+  Example of Cross-validation with IBCF.MTME
+</h3>
 
-#### Load example data
+<h4 id="external-data">
+  Load available data from other package
+</h4>
+ 
 ```{r CVModel}
 library(BGLR)
 data(wheat)
 ```
 
-#### Get DataSet in Tidy data form
+<h4 id="generate-tidydata">
+  Generate a new data set in tidy data form
+</h4>
+
 ```{r}
 pheno <- data.frame(ID = gl(n = 599, k = 1, length = 599*4),
                     Response = as.vector(wheat.Y),
@@ -62,17 +104,25 @@ pheno <- data.frame(ID = gl(n = 599, k = 1, length = 599*4),
 head(pheno)
 ```
 
-#### Generate 10 partitions to do cross-validation
+<h4 id="generate-crossvalidation">
+  Generate 10 partitions to do cross-validation
+</h4>
+
 ```{r}
 CrossV <- CV.RandomPart(pheno, NPartitions = 10, PTesting = 0.25, Set_seed = 123)
 ```
 
-#### Fitting the model
+<h4 id="fit-model">
+  Fitting the predictive model
+</h4>
 ```{r}
 pm <- IBCF(CrossV)
 ```
 
-#### Show some results
+<h4 id="results">
+  Show some results
+</h4>
+
 ```{r}
 summary(pm)
 ```
@@ -83,10 +133,10 @@ plot(pm, select = 'Pearson')
 plot(pm, select = 'MSEP')
 ```
 
+<h3 id="example2">
+  Example of Years prediction with IBCF.Years Function
+</h3>
 
-
-
-### IBCF.Years Function
 
 ```{r YearsData, echo = FALSE, warning = FALSE}
 library(mvtnorm)
@@ -108,24 +158,36 @@ Data.Example <- getTidyForm(Data.Example, onlyTrait = T)
 save(Data.Example, file = 'DataExample.RData')
 ```
 
-#### Loading your data
+<h4 id="external-data2">
+  Loading your data
+</h4>
+
 ```{r}
 load('DataExample.RData')
 head(Data.Example)
 ```
 
-#### Transforming the data from Tidy data to matrix form
+<h4 id="generate-matrixform">
+  Transforming the data from Tidy data to matrix form
+</h4>
 
 ```{r}
 Data.Example <- getMatrixForm(Data.Example, onlyTrait = TRUE)
 head(Data.Example)
 ```
 
-#### Adjust the model
+<h4 id="adjust-model">
+  Adjust the model
+</h4>
+
 ```{r Years}
 pm <- IBCF.Years(Data.Example, colYears = 1, Years.testing = c('2014', '2015', '2016'), Traits.testing = c('Trait1', 'Trait2', 'Trait3', 'Trait4', "Trait5"))
 ```
-#### Show some results
+
+<h4 id="results2">
+  Show some results
+</h4>
+
 ```{r}
 summary(pm)
 
@@ -134,8 +196,10 @@ barplot(pm, las = 2)
 barplot(pm, select = 'MSEP', las = 2)
 ```
 
-#### Load data from the package to do some test
-
+<h4 id="load-data">
+  Load available data from the package
+</h4>
+You can use the data sets in the package to test the functions
 ```{r loadData}
 library(IBCF.MTME)
 data('Wheat_IBCF')
@@ -149,24 +213,34 @@ data('Year_IBCF')
 head(Year_IBCF)
 ```
 
-## Citation
+<h2 id="cite">
+  Citation
+</h2>
 
-How to cite the package...
-Coming soon.
+First option, by the article paper
 
-## Issues
+(Comming soon)
 
-Feel free to report new issues in this link [Issues](https://github.com/frahik/IBCF.MTME/issues/new)
+Second option, by the manual package
+```{r}
+citation('IBCF.MTME')
+```
 
+<h2 id="contributions">
+  Contributions
+</h2>
 
-## Authors
+If you have any suggestions or feedback, I would love to hear about it. Feel free to report new issues in [this link](https://github.com/frahik/IBCF.MTME/issues/new), also if you want to request a feature/report a bug, or make a pull request if you can contribute.
 
+<h2 id="authors">
+  Authors
+</h2>
  - Francisco Javier Luna-Vázquez (Author, Maintainer)
  - Osval Antonio Montesinos-López (Author)
  - Abelardo Montesinos-López (Author)
  - José Crossa (Author)
 
-[cran-badge]: http://www.r-pkg.org/badges/version/IBCF.MTME "CRAN Page"
+
 [LGPL-badge]: https://img.shields.io/badge/License-LGPL%20v3-blue.svg "LGPL, Version 2.0"
 [status-bagde]: http://www.repostatus.org/badges/latest/active.svg "status"
 [downloads-badge]: http://cranlogs.r-pkg.org/badges/IBCF.MTME "IBCF.MTME cranlogs"
