--- a/README.Rmd
+++ b/README.Rmd
@@ -50,15 +50,11 @@ output: github_document
 <h2 id="news">
   News of this version (`r packageVersion('IBCF.MTME')`)
 </h2>
-  * Fixed important issue from `IBCF()$predictions_Summary`, now the correlation only uses the predicted testing data.
-  * Now `IBCF()` function show `$yHat` that is an average of the prediction values of every partition.
-  * Now `IBCF()` function shows in `$predicted_Partition` all the partitions values predicted (before was `$Predictions` and was changed to not confuse with `$yHat`).
-  * Now `IBCF()` function shows in `$observed` all the response values from the DataSet.
-  * Now `IBCF()` function shows in `$Data.Obs_Pred` all the response and predicted values from the DataSet.
-  * Now `IBCF.Years()` function shows in `$predicted` all the values predicted.
-  * Now `IBCF.Years()` function shows in `$observed` the response values for all the years from the Traits selected in `Traits.testing`.
-  * Now `CV.RandomPart()` shows the lenght in every partition in `$CrossValidation_length`.
-  * Now `CV.RandomPart()` admits `Traits.testing` to only use a `PTesting` percentage defined of the traits specified in the parameter to be used to fit the model.
+  * New function is added `IBCF.Data()`, this function could help to construct your dataset.
+  * `IBCF.Years()` now has `colID` parameter to select the identifiers of the observations.
+  * `CV.RandomPart()` function it's compatible with `IBCF.Data()` objects.
+  * Fixed a minor bug caused by the sequence in a for cycle.
+  
 
 See the last updates in [NEWS](NEWS.md).
 
