--- a/README.Rmd
+++ b/README.Rmd
@@ -237,7 +237,20 @@ head(Year_IBCF)
 
 First option, by the article paper
 
-(Comming soon)
+```
+@article{IBCF2018,
+author = {Montesinos-L{\'{o}}pez, Osval A. and Luna-V{\'{a}}zquez, Francisco Javier and Montesinos-L{\'{o}}pez, Abelardo and Juliana, Philomin and Singh, Ravi and Crossa, Jos{\'{e}}},
+doi = {10.3835/plantgenome2018.02.0013},
+issn = {1940-3372},
+journal = {The Plant Genome},
+number = {3},
+pages = {16},
+title = {{An R Package for Multitrait and Multienvironment Data with the Item-Based Collaborative Filtering Algorithm}},
+url = {https://dl.sciencesocieties.org/publications/tpg/abstracts/0/0/180013},
+volume = {11},
+year = {2018}
+}
+```
 
 Second option, by the manual package
 ```{r}
