--- a/README.Rmd
+++ b/README.Rmd
@@ -18,9 +18,9 @@ output: github_document
     <img src="https://img.shields.io/badge/lifecycle-maturing-blue.svg" alt="Maturing">
   </a> <a href="https://travis-ci.org/frahik/IBCF.MTME">
     <img src="https://travis-ci.org/frahik/IBCF.MTME.svg?branch=master" alt="Travis build status">
-  </a> <a href="https://ci.appveyor.com/project/frahik/IBCF.MTME">
-    <img src="https://ci.appveyor.com/api/projects/status/github/frahik/IBCF.MTME?branch=master&svg=true" alt="AppVeyor build status">
-  </a><a href="https://www.gnu.org/licenses/lgpl-3.0">
+  </a> <a href="https://coveralls.io/r/frahik/IBCF.MTME?branch=master">
+    <img src="https://coveralls.io/repos/github/frahik/IBCF.MTME/badge.svg" alt="Coverage status">
+  </a> <a href="https://www.gnu.org/licenses/lgpl-3.0">
     <img src="https://img.shields.io/badge/License-LGPL%20v3-blue.svg" alt="LGPL, Version 3.0">
   </a> <a href="http://www.repostatus.org/#active">
     <img src="http://www.repostatus.org/badges/latest/active.svg" alt="Status of the Repo: Active">
